# pea-preprocessor

./: CMakeLists.txt  README.md  main.cpp  main_args.cpp  main_args.h
lang/: config.h  types.h
lang/error/: directive_error.h  include_error.h  macro_error.h  tool_error.h
lang/pp/: pp_dependency_observer.cpp  pp_dependency_observer.h  pp_directive_processor.cpp  pp_directive_processor.h  pp_include_observer.cpp  pp_include_observer.h  pp_main_directive_processor.cpp  pp_main_directive_processor.h  pp_selection_stack.cpp  pp_selection_stack.h
lang/pp/directive/: pp_binary_directives.cpp  pp_binary_directives.h  pp_conditional_macro_directives.cpp  pp_conditional_macro_directives.h  pp_directive_base.h  pp_include_directives.cpp  pp_include_directives.h  pp_macro_directives.cpp  pp_macro_directives.h  pp_selection_directives.cpp  pp_selection_directives.h
lang/pp/include/: pp_binary_tool_ssource.cpp  pp_binary_tool_ssource.h  pp_included_base.cpp  pp_included_base.h  pp_included_file_ssource.cpp  pp_included_file_ssource.h  pp_tool_ssource.cpp  pp_tool_ssource.h
lang/pp/macro/: macro.cpp  macro.h  macro_library.cpp  macro_library.h  macro_scanning.h  macro_signature.cpp  macro_signature.h
lang/pp/ssource/: pp_including_ssource.cpp  pp_including_ssource.h  pp_nocomment_ssource.cpp  pp_nocomment_ssource.h
lib/: char_utility.h  filesystem.h  scanner.h  string_building.h  string_scanning.h
lib/error/: sscan_error.h
lib/ssource/: file_string_source.h  filter_string_source.h  functional_filter_string_source.h  stream_string_source.h  string_source.h  string_string_source.h
option/: parameter_interface.cpp  parameter_interface.h
